# db-build

./: pyproject.toml
db_build/: cli.py  sqlite_utils_plugin.py
tests/: test_db_build.py
tests/examples/: test.csv
